--- a/SparkScalaCourse/.settings/org.scala-ide.sdt.core.prefs
+++ b/SparkScalaCourse/.settings/org.scala-ide.sdt.core.prefs
@@ -29,7 +29,7 @@ optimise=false
 recompileOnMacroDef=true
 relationsDebug=false
 scala.compiler.additionalParams=\ -Xsource\:2.11 -Ymacro-expand\:none
-scala.compiler.installation=-1343075599
+scala.compiler.installation=978910693
 scala.compiler.sourceLevel=2.11
 scala.compiler.useProjectSettings=true
 src=main
