--- a/SparkScalaCourse/.classpath
+++ b/SparkScalaCourse/.classpath
@@ -212,5 +212,8 @@
 	<classpathentry kind="lib" path="C:/spark/spark-2.2.1-bin-hadoop2.7/spark-2.2.1-bin-hadoop2.7/jars/xmlenc-0.52.jar"/>
 	<classpathentry kind="lib" path="C:/spark/spark-2.2.1-bin-hadoop2.7/spark-2.2.1-bin-hadoop2.7/jars/xz-1.0.jar"/>
 	<classpathentry kind="lib" path="C:/spark/spark-2.2.1-bin-hadoop2.7/spark-2.2.1-bin-hadoop2.7/jars/zookeeper-3.4.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/SparkScala/SparkScala/dstream-twitter_2.11-0.1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/SparkScala/SparkScala/twitter4j-core-4.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/SparkScala/SparkScala/twitter4j-stream-4.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
